I made one small but intresting project and from that project  now I know how filter() method works. Da da!

--- a/project-js/public/index.html
+++ b/project-js/public/index.html
@@ -2,10 +2,49 @@
 <html lang="en">
   <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel='stylesheet' href='css/main.css'>
   </head>
   <body>
 
-    <script type="text/javascript" src='js/main.js'></script>
+    <h2>Select your favorite album/s!</h2>
+
+     <div class="albums-container">
+       <div class="album">
+         <img src="https://i.pinimg.com/originals/3f/9b/1a/3f9b1ab0095226f5af5f5720e1a49acd.jpg" alt="">
+         <div class='title'>
+           Eminem
+         </div>
+       </div>
+       <div class="album">
+         <img src="https://images.genius.com/0206b6b267b7d6d3a74d6edc877aa423.630x630x1.jpg" alt="">
+         <div class='title'>
+           Maya
+         </div>
+       </div>
+       <div class="album">
+         <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/50_Cent_-_The_Massacre.png" alt="">
+         <div class='title'>
+           50 cent
+         </div>
+       </div>
+       <div class="album">
+         <img src="https://i.ytimg.com/vi/EfE4tfZDpSc/maxresdefault.jpg" alt="">
+         <div class='title'>
+           Teodora
+         </div>
+       </div>
+     </div>
+
+     <button id='saveB' type="button" name="button">Save Album</button>
+
+     <div class="notification">
+       <p>Download completed</p>
+       <p class='total'>4 items saved</p>
+       <!-- <button>ok</button> -->
+     </div>
+
+
+     <script src='js/main.js'></script>
 
   </body>
 </html>
