--- a/project-js/public/index.html
+++ b/project-js/public/index.html
@@ -1,50 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel='stylesheet' href='css/main.css'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Pokemon game - JS project</title>
+    <link href="reset.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Cabin+Sketch:400,700|Freckle+Face|Press+Start+2P" rel="stylesheet">
   </head>
   <body>
+    <div class="select-screen">
+      <div class="header">
+        <div class="mode">VS Mode</div>
+        <div class="title">
+          Choose a Pokemon
+        </div>
+      </div>
+      <div class="main">
+        <div class="character charmander">
+          <div class="title">Charmander</div>
+          <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/charmander.gif) no-repeat center center;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;height: 100px; width: 100px;"></div>
+        </div>
 
-    <h2>Select your favorite album/s!</h2>
+        <div class="character bulbasaur">
+          <div class="title">Bulbasaur</div>
+          <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/bulbasaur.gif) no-repeat center center;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;height: 100px; width: 100px;"></div>
+        </div>
 
-     <div class="albums-container">
-       <div class="album">
-         <img src="https://i.pinimg.com/originals/3f/9b/1a/3f9b1ab0095226f5af5f5720e1a49acd.jpg" alt="">
-         <div class='title'>
-           Eminem
-         </div>
-       </div>
-       <div class="album">
-         <img src="https://images.genius.com/0206b6b267b7d6d3a74d6edc877aa423.630x630x1.jpg" alt="">
-         <div class='title'>
-           Maya
-         </div>
-       </div>
-       <div class="album">
-         <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/50_Cent_-_The_Massacre.png" alt="">
-         <div class='title'>
-           50 cent
-         </div>
-       </div>
-       <div class="album">
-         <img src="https://i.ytimg.com/vi/EfE4tfZDpSc/maxresdefault.jpg" alt="">
-         <div class='title'>
-           Teodora
-         </div>
-       </div>
-     </div>
+        <div class="character squirtle">
+          <div class="title">Squirtle</div>
+          <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/squirtle.gif) no-repeat center center;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;height: 100px; width: 100px;"></div>
+        </div>
+      </div>
+    </div>
 
-     <button id='saveB' type="button" name="button">Save Album</button>
+<div id="battle-screen">
+  <div class="fight-btn">
+    fight
+  </div>
 
-     <div class="notification">
-       <p>Download completed</p>
-       <p class='total'>4 items saved</p>
-       <!-- <button>ok</button> -->
-     </div>
+  <div class="battle-btns">
+    <div class="rock">
+      <img src="//i.imgur.com/0sWAgmm.png" width="100%">
+      Rock
+    </div><div class="paper">
+      <img src="//i.imgur.com/aU8NcKH.png">
+      Paper
+    </div><div class="scissors">
+      <img src="//i.imgur.com/n4HFHgj.png">
+      Scissors
+    </div>
+  </div>
+
+  <div class="player">
+    <div class="player1">
+      <div class="stats">
+        <div class="name">
+          Charmander
+          <div class="level">
+            Lv5
+          </div>
+        </div>
+
+        <div class="health">
+          <div class="title">HP:</div>
+          <div class="health-bar">
+            <div class="inside" style="width: 100%;"></div>
+          </div>
+        </div>
+
+      </div>
+      <img src="http://www.smogon.com/dex/media/sprites/xy/charmander.gif" />
+
+    </div>
+  </div>
+
+  <div class="cpu">
+    <div class="player2">
+      <div class="stats">
+        <div class="name">
+          Charmander
+          <div class="level">
+            Lv5
+          </div>
+        </div>
+
+        <div class="health">
+          <div class="title">HP:</div>
+          <div class="health-bar">
+            <div class="inside" style="width: 100%;"></div>
+          </div>
+        </div>
+
+      </div>
+      <img src="http://www.smogon.com/dex/media/sprites/xy/charmander.gif" />
+    </div>
+  </div>
+</div>
 
 
-     <script src='js/main.js'></script>
 
+
+
+    <script src="index.js"></script>
   </body>
 </html>
