--- a/project-js/public/index.html
+++ b/project-js/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Pokemon game - JS project</title>
-    <link href="reset.css" rel="stylesheet" type="text/css" />
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bangers|Cabin+Sketch:400,700|Freckle+Face|Press+Start+2P" rel="stylesheet">
   </head>
   <body>
@@ -17,7 +16,7 @@
         </div>
       </div>
       <div class="main">
-        <div class="character charmander">
+        <div class="character charmander" data-pokemon='charmander'>
           <div class="title">Charmander</div>
           <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/charmander.gif) no-repeat center center;
   -webkit-background-size: 100% 100%;
@@ -26,7 +25,7 @@
   background-size: 100% 100%;height: 100px; width: 100px;"></div>
         </div>
 
-        <div class="character bulbasaur">
+        <div class="character bulbasaur" data-pokemon='bulbasaur'>
           <div class="title">Bulbasaur</div>
           <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/bulbasaur.gif) no-repeat center center;
   -webkit-background-size: 100% 100%;
@@ -35,7 +34,7 @@
   background-size: 100% 100%;height: 100px; width: 100px;"></div>
         </div>
 
-        <div class="character squirtle">
+        <div class="character squirtle" data-pokemon='squirtle'>
           <div class="title">Squirtle</div>
           <div style="background: url(http://www.smogon.com/dex/media/sprites/xy/squirtle.gif) no-repeat center center;
   -webkit-background-size: 100% 100%;
@@ -45,6 +44,10 @@
         </div>
       </div>
     </div>
+
+
+
+<!-- BATTLE SCREEN -->
 
 <div id="battle-screen">
   <div class="fight-btn">
@@ -114,6 +117,6 @@
 
 
 
-    <script src="index.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
